<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">家家机器人</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    
    <string name="name_camera">Camera</string>
    
    <string name="name_secretary">Secretary</string>
    <string name="name_secretary_add_event">Add Event</string>
    <string name="name_date_picker">Select Date</string>
    
    <string name="name_unuse">xxx</string>
    <string name="voice">Voice</string>
    <string name="save">Save and Exit</string>
    <string name="exitvoice">Exit</string>
    <string name="ip_title">设置主机IP：</string>
    
    
    <string name="roscalendar">Calendar</string>
    <string name="event_item_add">Add Event</string>
    <string name="event_title_hint">Title</string>
    <string name="event_date_title">Date</string>
    <string name="event_warning_title">Warning Time</string>
    <string name="event_type_title">Type</string>
    <string name="event_content_hint">Content</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    

</resources>
