<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:background="#444444"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/ev_event_title"
        android:hint="@string/event_title_hint"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

	<EditText 
        android:id="@+id/ev_event_content"
        android:hint="@string/event_content_hint"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />
	    
	<LinearLayout 
	    android:background="@drawable/event_bg"
        android:layout_width="match_parent"
    	android:layout_weight="1"
        android:layout_height="0dp"
    	android:gravity="center"
    	android:orientation="horizontal" >
        <TextView 
            android:text="@string/event_date_title"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView 
            android:id="@+id/event_date"
            android:gravity="right"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageView 
            android:id="@+id/iv_calendar"
            android:layout_gravity="center"
            android:background="@drawable/btn_calendar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
	<LinearLayout 
	    android:background="@drawable/event_bg"
        android:layout_width="match_parent"
    	android:layout_weight="1"
        android:layout_height="0dp"
    	android:gravity="center"
    	android:orientation="horizontal" >
        <TextView 
            android:text="@string/event_warning_title"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView 
            android:id="@+id/event_warning_time"
            android:gravity="right"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageView 
            android:id="@+id/iv_warning_calendar"
            android:layout_gravity="center"
            android:background="@drawable/btn_calendar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
	
	<RelativeLayout 
	    android:visibility="gone"
	    android:background="@drawable/event_edit_bg" 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
        <TextView 
            android:text="@string/event_type_title"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner 
            android:id="@+id/sn_type"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	</RelativeLayout>

	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >

		<Button
	        android:id="@+id/btn_addevent_cancel"
	        android:text="@string/cancel"
	        style="?android:attr/buttonBarButtonStyle" 
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" />
	    
	    <Button
	        android:id="@+id/btn_addevent_ok"
	        android:text="@string/ok"
	        style="?android:attr/buttonBarButtonStyle" 
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" />
	    
	</LinearLayout>
 
</LinearLayout>
